#####################
Nagios 2.x Change Log
#####################


2.8 - ??/??/2007
------------------
* Bug fix for calculating notification interval with service escalations
* Bug fix for using servicegroups in service dependency definitions



2.7 - 01/19/2007
----------------
* p1.pl now sets environment var (NAGIOS_PLUGIN) to indicate patch of plugin that is executing
* Updated nagiostats with new MRTG vars for tracking buffer usage
* Added sample MRTG config file
* Minor patches to availability and status CGIs
* Minor documentation updates
* Fix for segfault during expiration or deletion of scheduled downtime
* Fix for scheduling immediate service check through WAP interface
* Fix for leading whitespace before comments in object config files



2.6 - 11/27/2006
----------------
* Fix for unscheduled triggered downtime entries
* Fix for embedded audio in tac and status CGIs
* Fixed bug in nagiostats utility when reporting host/service check latency
* Misc code cleanups for compiler warnings
* Fixed error when reading empty (zero byte) config files
* Default is now to check for orphaned service checks (Francois Caen)
* Fixed bug with non-standard CGI config file location in status data (Carson Gaspar)
* Fixed bugs and simplified examples in sample config files (Mark Young)



2.5 - 07/13/2006
----------------
* Bug fix for excluding hidden files from config file processing
* Bug fix for incorrect links to trends CGI from notification CGI
* Hopefully faster shutdown during host checks
* Lock file is now closed just prior to shutdown, instead of when SIGINT is received
* Bug fix for segfault during startup due to extended service definition duplication
* Bug fix for segfault with wildcards in servicegroup members
* Bug fix for segfault when p1.pl file was missing and embedded Perl interpreter was enabled



2.4 - 05/31/2006
----------------
* Fix for missing <limits.h> include that prevented CGI compilation under Solaris